PROJECT(FLIP2D_TEST)

ADD_EXECUTABLE(box box)
TARGET_LINK_LIBRARIES(box)
INSTALL(TARGETS box DESTINATION bin)

ADD_EXECUTABLE(testArray testArray)
TARGET_LINK_LIBRARIES(testArray)
INSTALL(TARGETS testArray DESTINATION bin)

ADD_EXECUTABLE(testSparse testSparse)
TARGET_LINK_LIBRARIES(testSparse)
INSTALL(TARGETS testSparse DESTINATION bin)